--- a/project_template/${{ 'Pipfile' if values.package_manager == 'pipenv' }}.njk
+++ b/project_template/${{ 'Pipfile' if values.package_manager == 'pipenv' }}.njk
@@ -4,9 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+copier = "*"
 pandas = "*"
+boto3 = "*"
+jinja2 = "*"
 
 [dev-packages]
+copier = "*"
 bandit = "*"
 pytest = "*"
 pytest-xdist = "*"
