--- a/project_template/${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk
+++ b/project_template/${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "${{ values.repository_name }}"
-version = "0.1.0"
+version = "0.2.0"
 description = "${{ values.repository_description }}"
 authors = ["${{ values.repository_owner }}"]
 license = "MIT"
@@ -9,18 +9,18 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pandas = "^2.3.0"
+pandas = "^2.3.1"
+boto3 = "^1.39.10"
+jinja2 = "^3.1.6"
+copier = "^9.8.0"
 
 [tool.poetry.group.dev.dependencies]
-bandit = "^1.8.5"
+bandit = "^1.8.6"
 pytest = "^8.4.1"
-pytest-xdist = "^3.7.0"
-ruff = "^0.12.1"
+pytest-xdist = "^3.8.0"
+ruff = "^0.12.4"
 pytest-cov = "^6.2.1"
-
-[tool.ruff]
-line-length = 120
-indent-width = 4
+copier = "^9.8.0"
 
 [tool.ruff.lint]
 select = [
