--- a/project_template/.github/workflows/${{ 'etl-deploy.yml' if values.enable_s3_deployment }}.njk
+++ b/project_template/.github/workflows/${{ 'etl-deploy.yml' if values.enable_s3_deployment }}.njk
@@ -36,6 +36,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+{% if values.package_manager == 'poetry' %}
+      - name: Install Poetry
+        run: pipx install poetry==1.8.3
+{% endif %}
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -47,9 +52,6 @@ jobs:
 {% endif %}
 
 {% if values.package_manager == 'poetry' %}
-      - name: Install Poetry
-        run: pipx install poetry==1.8.3
-
       - name: Install Dependencies
         run: poetry install --no-root
 {% else %}
