--- a/project_template/.github/workflows/${{ 'etl-deploy.yml' if values.enable_s3_deployment }}.njk
+++ b/project_template/.github/workflows/${{ 'etl-deploy.yml' if values.enable_s3_deployment }}.njk
@@ -84,7 +84,7 @@ jobs:
     name: Deploy to S3
     runs-on: ubuntu-22.04
     needs: etl-pipeline
-    {% if values.deploy_on_pr %}
+    {% if not values.deploy_on_pr %}
     if: >
       (github.event_name == 'push' && github.ref == 'refs/heads/${{ values.default_branch }}') ||
       (github.event_name == 'workflow_dispatch' && inputs.deploy_to_s3 == 'true')
