--- a/project_template/${{values.module_name}}/deploy.py.njk
+++ b/project_template/${{values.module_name}}/deploy.py.njk
@@ -356,9 +356,9 @@ class S3Deployer:
     def _get_website_url(self) -> str:
         """Get the static website URL for the bucket."""
         if self.region_name == "us-east-1":
-            return f"http://{self.bucket_name}.s3.us-east-1.amazonaws.com/${{values.module_name}}/index.html"
+            return f"http://{self.bucket_name}.s3.us-east-1.amazonaws.com/${{values.repository_name}}/index.html"
         else:
-            return f"http://{self.bucket_name}.s3.{self.region_name}.amazonaws.com/${{values.module_name}}/index.html"
+            return f"http://{self.bucket_name}.s3.{self.region_name}.amazonaws.com/${{values.repository_name}}/index.html"
 
     def _get_content_type(self, file_extension: str) -> str:
         """Get appropriate content type for file extension."""
