--- a/project_template/${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk
+++ b/project_template/${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk
@@ -10,7 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.3.1"
-boto3 = "^1.39.10"
+boto3 = "^1.39.11"
 jinja2 = "^3.1.6"
 copier = "^9.8.0"
 
@@ -21,6 +21,7 @@ pytest-xdist = "^3.8.0"
 ruff = "^0.12.4"
 pytest-cov = "^6.2.1"
 copier = "^9.8.0"
+
 
 [tool.ruff.lint]
 select = [
@@ -53,6 +54,8 @@ ignore = [
     # Too many args in functions
     "PLR0913"
 ]
+
+line-length = 150
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
