add metadata.links.url vsc

--- a/project_template/catalog-info.yaml.njk
+++ b/project_template/catalog-info.yaml.njk
@@ -19,6 +19,9 @@ metadata:
     - url: https://app.pluralsight.com/channels/details/c4f16af4-8278-440c-9ae8-fc9e95f1f34d
       title: Learning Pathway  
       icon: help
+    - url: vscode://vscode.git/clone?url=https://github.com/${{ values.repository_owner }}/${{ values.repository_name }}.git
+      title: Open in Local Visual Studio Code
+      icon: scaffolder
 spec:
   type: module
   lifecycle: experimental
